# label-studio-lab

./: Makefile  README.md  pyproject.toml
